--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -549,24 +549,12 @@
             <ul class="nav-list">
                 <li class="nav-item">
                     <a class="nav-link {% if 'analytics' in request.resolver_match.url_name %}active{% endif %}" 
-                       href="/business/{{ request.tenant.slug }}/analytics/">
+                       href="/business/{{ request.tenant.slug }}/reports/analytics/">
                         <i class="nav-icon fas fa-chart-line"></i>
                         <span class="nav-text">Analytics</span>
                     </a>
                 </li>
                 
-                <li class="nav-item">
-                    <a class="nav-link {% if 'subscriptions' in request.resolver_match.namespace %}active{% endif %}" 
-                       href="/business/{{ request.tenant.slug }}/subscriptions/">
-                        <i class="nav-icon fas fa-crown"></i>
-                        <span class="nav-text">Subscription</span>
-                        {% if subscription_status == 'trial' %}
-                        <span class="nav-badge nav-badge-warning">Trial</span>
-                        {% elif subscription_status == 'expired' %}
-                        <span class="nav-badge nav-badge-danger">Expired</span>
-                        {% endif %}
-                    </a>
-                </li>
             </ul>
         </div>
         {% endif %}
