--- a/templates/services/quick_order.html
+++ b/templates/services/quick_order.html
@@ -1050,7 +1050,7 @@
 
                                 <!-- Services Grid -->
                                 <div class="services-grid" id="servicesGrid">
-                                    {% for service in popular_services %}
+                                    {% for service in all_services %}
                                     <div class="service-card" onclick="toggleService('{{ service.id }}')" data-service-id="{{ service.id }}" data-category="{{ service.category.id }}">
                                         <div class="service-header">
                                             <h6 class="service-name">{{ service.name }}</h6>
@@ -1064,6 +1064,11 @@
                                             </div>
                                             <div class="service-category">{{ service.category.name }}</div>
                                         </div>
+                                        {% if service.is_popular %}
+                                        <div class="service-badge">
+                                            <span class="popular-badge">POPULAR</span>
+                                        </div>
+                                        {% endif %}
                                     </div>
                                     {% empty %}
                                     <div class="empty-state">
